search bar and final commit complete project

--- a/src/index.css
+++ b/src/index.css
@@ -95,8 +95,8 @@ input[type="text"] {
 }
 
 .cards {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 3.2rem;
